--- a/settings.gradle
+++ b/settings.gradle
@@ -1,3 +1,3 @@
 include ':libs:MemorizingTrustManager', ':libs:EnhancedListView'
 
-rootProject.name = 'Conversations'
+rootProject.name = 'Conversations Legacy'
