Keep app name as Legacy in activity
...so I don't end up with same name app in KISS launcher: https://github.com/Neamar/KISS/issues/932#issuecomment-377022353

--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -45,7 +45,7 @@
 
         <activity
             android:name=".ui.ConversationActivity"
-            android:label="@string/app_name_short"
+            android:label="@string/app_name"
             android:launchMode="singleTask"
             android:minWidth="300dp"
             android:minHeight="300dp"
